# cs-summary-reflection

./: .all-contributorsrc  .gitignore  .scalafmt.conf  .sonarcloud.properties  .travis.yml  CONTRIBUTING-en.md  CONTRIBUTING.md  LICENSE  README-en.md  README.md  SUMMARY.md  _config.yml  article_list.md  build.gradle  build_befor_commit.sh  build_before_commit.sh  countByAuthors.md  countByAuthors.sh  custom-git.sh  generate_art_list.sh  java-examples.md  java-leetcode.md  jvm_modules_eg_build_info.txt  more_info_for_build.txt  package-lock.json  package.json  pom.xml  python-leetcode.md  rust-examples.md  rust-exercise.md  scala-leetcode.md  scala-utils.md  settings.gradle  sync-to-coding.sh
.github/: dependabot.yml
_include/: time.html
_includes/: comments.html  head.html  head.md  page-footer.html  page-header.html
_layouts/: default.html
buildSrc/: build.gradle  settings.gradle
doc/: 404.md  LICENSE  _config.yml  comments.md
docs/: 404.md  BingSiteAuth.xml  CNAME  README.md  _config.yml  tags.md  (+6 more)
rust-examples/: Cargo.toml  README.md
rust-examples/files/: starwars.rs
rust-examples/schemas/: book.graphql
rust-examples/src/: closures.rs  conversion.rs  custom_types.rs  flow_control.rs  formatted_print.rs  functions.rs  generics.rs  main.rs  misc.rs  modules.rs  primitives.rs  test_cynic.rs  test_cynic_starwars.rs  traits.rs  types.rs  variable_bindings.rs
rust-examples/src/snapshots/: rust_examples__test_cynic__snapshot_query_dsl.snap
rust-exercise/: Cargo.toml  README.md
rust-exercise/src/: closures_syntax.rs  collection_function.rs  control_function.rs  enum_data_type.rs  example_guessing_game.rs  front_of_house.rs  generic_traits_lifetimes.rs  iterator_demonstration.rs  lib.rs  macro_syntax.rs  main.rs  match_syntax.rs  method_syntax.rs  other_function.rs  panic_function.rs  point_function.rs  simple_array_data_type.rs  smart_point.rs  struct_data_type.rs  thread_syntax.rs  variables_function.rs
rust-exercise/src/front_of_house/: hosting.rs
(+3041 files in other folders)
