[package]
name = "rust-examples"
version = "0.1.0"
authors = ["梦境迷离 <liguobin@growingio.com>"]
edition = "2018"
#build = "build.rs" 构建前操作
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "0.11.1", features = ["surf"] }
cynic-codegen = { version = "0.11.1"}
surf = "2.0.0"
insta = "0.16.0"
rstest = "0.6.3"